kube/deploy/infra/authentification/authelia/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-authz
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local/api/authz/forward-auth?authelia_url=https%3A%2F%2Fsso.${EXTERNAL_DOMAIN}%2F
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
