kube/deploy/infra/authentification/authelia/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app authelia
spec:
  routes:
    - match: Host(`sso.${DOMAIN_PUBLIC}`)
      kind: Rule
      services:
        - name: *app
          port: 80
  tls:
    domains:
      - main: sso.${DOMAIN_PUBLIC}
